--- a/app/index.html
+++ b/app/index.html
@@ -1,123 +1,212 @@
+<!DOCTYPE html>
 <html lang="en">
-<style>
-    .container {
-        margin: 40px auto;
-        width: 80%;
-    }
-    .button {
-        width: 160px;
-        height: 45px;
-        border-radius: 6px;
-        font-size: 15px;
-        margin-top: 20px;
-    }
-    img {
-        width: 328px;
-        height: 287px;
-        display: block;
-        margin-bottom: 20px;
-    }
-    hr {
-        width: 400px;
-        margin-left: 0;
-    }
-    h3 {
-        display: inline-block;
-    }
-    #container {
-        display: none;
-    }
-    #container-edit {
-        display: none;
-    }
-    #container-edit input {
-        height: 32px;
-    }
-    #container-edit hr {
-        margin: 25px 0;
-    }
-    #container-edit input {
-        width: 195px;
-        font-size: 15px;
-    }
-</style>
-<script>
-    (async function init() {
-        const response = await fetch('http://localhost:3000/get-profile');
-        console.log("response", response);
-        const user = await response.json();
-        console.log(JSON.stringify(user));
+<head>
+  <meta charset="UTF-8" />
+  <title>User Profile</title>
+  <link rel="stylesheet" href="styles.css" />
+</head>
+<body>
 
-        document.getElementById('name').textContent = user.name ? user.name : 'Anna Smith';
-        document.getElementById('email').textContent = user.email ? user.email : 'anna.smith@example.com';
-        document.getElementById('interests').textContent = user.interests ? user.interests : 'coding';
+  <!-- LOGIN SECTION -->
+  <div class="container" id="login-container">
+    <h1>Enter Your Email</h1>
+    <input type="email" id="user-email" placeholder="you@example.com" />
+    <button class="button" id="load-profile-btn">Load Profile</button>
+    <p class="message" id="login-message"></p>
+  </div>
 
-        const cont = document.getElementById('container');
-        cont.style.display = 'block';
-    })();
+  <!-- PROFILE DISPLAY SECTION -->
+  <div class="container" id="container" style="display:none;">
+    <h1>User Profile</h1>
+    <img id="profile-img" class="circle-image" src="" alt="user-profile" />
+    <div class="profile-row"><strong>Name:</strong> <span id="name">Unknown</span></div><hr />
+    <div class="profile-row"><strong>Email:</strong> <span id="email">you@example.com</span></div><hr />
+    <div class="profile-row"><strong>Interests:</strong> <span id="interests">N/A</span></div><hr />
+    <button class="button" id="edit-profile-btn">Edit Profile</button>
+    <p class="message success" id="status"></p>
+  </div>
+
+  <!-- EDIT PROFILE SECTION -->
+  <div class="container" id="container-edit" style="display:none;">
+    <h1>Edit Profile</h1>
+
+    <div class="file-upload-wrapper">
+      <input type="file" id="input-image" accept="image/*" />
+      <div class="file-upload-preview" id="file-upload-preview">
+        <span id="upload-icon">📷</span>
+      </div>
+    </div>
+
+    <label>
+      Name:<br />
+      <input type="text" id="input-name" placeholder="Your name" />
+    </label><br />
+    <label>
+      Email:<br />
+      <input type="email" id="input-email" disabled />
+    </label><br />
+    <label>
+      Interests:<br />
+      <input type="text" id="input-interests" placeholder="Your interests" />
+    </label><br />
+    <button class="button" id="update-profile-btn">Update Profile</button>
+    <p class="message" id="edit-message"></p>
+  </div>
+
+  <script>
+    const loginContainer = document.getElementById('login-container');
+    const profileContainer = document.getElementById('container');
+    const editContainer = document.getElementById('container-edit');
+
+    const loginMessage = document.getElementById('login-message');
+    const statusMessage = document.getElementById('status');
+    const editMessage = document.getElementById('edit-message');
+
+    let currentEmail = null;
+    let currentImageUrl = null;
+
+    document.getElementById('load-profile-btn').addEventListener('click', loadUserProfile);
+    document.getElementById('edit-profile-btn').addEventListener('click', editProfile);
+    document.getElementById('update-profile-btn').addEventListener('click', handleUpdateProfileRequest);
+    document.getElementById('input-image').addEventListener('change', previewImage);
+
+    function showMessage(element, message, type = 'error') {
+      element.textContent = message;
+      element.className = `message ${type}`;
+      if (message) {
+        setTimeout(() => {
+          element.textContent = '';
+          element.className = 'message';
+        }, 4000);
+      }
+    }
+
+    function validateEmail(email) {
+      const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+      return re.test(email);
+    }
+
+    async function loadUserProfile() {
+      showMessage(loginMessage, '');
+      const emailInput = document.getElementById('user-email').value.trim();
+      if (!emailInput) {
+        showMessage(loginMessage, "Please enter your email.");
+        return;
+      }
+      if (!validateEmail(emailInput)) {
+        showMessage(loginMessage, "Please enter a valid email.");
+        return;
+      }
+      currentEmail = emailInput;
+
+      try {
+        const response = await fetch(`/get-profile?email=${encodeURIComponent(currentEmail)}`);
+        const data = await response.json();
+
+        loginContainer.style.display = 'none';
+        statusMessage.textContent = '';
+        editMessage.textContent = '';
+
+        if (data.newUser) {
+          showMessage(editMessage, "New user detected. Please complete your profile.", 'info');
+          document.getElementById('input-name').value = "";
+          document.getElementById('input-email').value = currentEmail;
+          document.getElementById('input-interests').value = "";
+          document.getElementById('file-upload-preview').innerHTML = '<span id="upload-icon">📷</span>';
+          editContainer.style.display = 'block';
+        } else {
+          const user = data.user;
+          document.getElementById('name').textContent = user.name || 'Unknown';
+          document.getElementById('email').textContent = currentEmail;
+          document.getElementById('interests').textContent = user.interests || 'N/A';
+          currentImageUrl = user.imageUrl;
+          document.getElementById('profile-img').src = currentImageUrl || '/profile-picture';
+          profileContainer.style.display = 'block';
+        }
+      } catch (err) {
+        showMessage(loginMessage, 'Failed to load profile. Please try again.');
+        loginContainer.style.display = 'block';
+      }
+    }
+
+    function editProfile() {
+      showMessage(editMessage, '');
+      document.getElementById('input-name').value = document.getElementById('name').textContent;
+      document.getElementById('input-email').value = document.getElementById('email').textContent;
+      document.getElementById('input-interests').value = document.getElementById('interests').textContent;
+
+      const previewContainer = document.getElementById('file-upload-preview');
+      if (currentImageUrl) {
+        previewContainer.innerHTML = `<img src="${currentImageUrl}" alt="Preview" />`;
+      } else {
+        previewContainer.innerHTML = '<span id="upload-icon">📷</span>';
+      }
+
+      profileContainer.style.display = 'none';
+      editContainer.style.display = 'block';
+      statusMessage.textContent = '';
+    }
 
     async function handleUpdateProfileRequest() {
-        const contEdit = document.getElementById('container-edit');
-        const cont = document.getElementById('container');
+      showMessage(editMessage, '');
+      const name = document.getElementById('input-name').value.trim();
+      const interests = document.getElementById('input-interests').value.trim();
 
-        const payload = {
-            name: document.getElementById('input-name').value, 
-            email: document.getElementById('input-email').value, 
-            interests: document.getElementById('input-interests').value
-        };
-        
-        const response = await fetch('http://localhost:3000/update-profile', {
-            method: "POST",
-            headers: {
-              'Accept': 'application/json',
-              'Content-Type': 'application/json'
-            },
-            body: JSON.stringify(payload)
-        });
+      if (!name) {
+        showMessage(editMessage, "Name cannot be empty.");
+        return;
+      }
+      if (!interests) {
+        showMessage(editMessage, "Interests cannot be empty.");
+        return;
+      }
+
+      const formData = new FormData();
+      formData.append('user', JSON.stringify({
+        email: currentEmail,
+        name,
+        interests,
+      }));
+
+      const fileInput = document.getElementById('input-image');
+      if (fileInput.files[0]) {
+        formData.append('profileImage', fileInput.files[0]);
+      }
+
+      try {
+        const response = await fetch('/update-profile', { method: "POST", body: formData });
+        if (!response.ok) throw new Error('Failed to update profile.');
         const jsonResponse = await response.json();
 
         document.getElementById('name').textContent = jsonResponse.name;
         document.getElementById('email').textContent = jsonResponse.email;
         document.getElementById('interests').textContent = jsonResponse.interests;
+        document.getElementById('profile-img').src = jsonResponse.imageUrl || '/profile-picture';
+        currentImageUrl = jsonResponse.imageUrl;
 
-        cont.style.display = 'block';
-        contEdit.style.display = 'none';
+        editContainer.style.display = 'none';
+        profileContainer.style.display = 'block';
+        showMessage(statusMessage, "Profile updated successfully!", 'success');
+      } catch (err) {
+        showMessage(editMessage, "Failed to update profile. Try again.");
+      }
     }
 
-    function updateProfile() {
-        const contEdit = document.getElementById('container-edit');
-        const cont = document.getElementById('container');
+    function previewImage() {
+      const file = this.files[0];
+      const previewContainer = document.getElementById('file-upload-preview');
+      const uploadIcon = document.getElementById('upload-icon');
 
-        document.getElementById('input-name').value = document.getElementById('name').textContent;
-        document.getElementById('input-email').value = document.getElementById('email').textContent;
-        document.getElementById('input-interests').value = document.getElementById('interests').textContent;
-
-        cont.style.display = 'none';
-        contEdit.style.display = 'block';
+      if (file) {
+        const reader = new FileReader();
+        reader.onload = e => {
+          if (uploadIcon) uploadIcon.style.display = 'none';
+          previewContainer.innerHTML = `<img src="${e.target.result}" alt="Preview" />`;
+        };
+        reader.readAsDataURL(file);
+      }
     }
-</script>
-<body>
-    <div class='container' id='container'>
-        <h1>User profile</h1>
-        <img src='profile-picture' alt="user-profile">
-        <span>Name: </span><h3 id='name'>Anna Smith</h3>
-        <hr />
-        <span>Email: </span><h3 id='email'>anna.smith@example.com</h3>
-        <hr />
-        <span>Interests: </span><h3 id='interests'>coding</h3>
-        <hr />
-        <button class='button' onclick="updateProfile()">Edit Profile</button>
-    </div>
-    <div class='container' id='container-edit'>
-        <h1>User profile</h1>
-        <img src='profile-picture' alt="user-profile">
-        <span>Name: </span><label for='input-name'></label><input type="text" id='input-name' value='Anna Smith' />
-        <hr />
-        <span>Email: </span><label for='input-email'></label><input type="email" id='input-email' value='anna.smith@example.com' />
-        <hr />
-        <span>Interests: </span><label for='input-interests'></label><input type="text" id='input-interests' value='coding' />
-        <hr />
-        <button class='button' onclick="handleUpdateProfileRequest()">Update Profile</button>
-    </div>
+  </script>
+
 </body>
 </html>
